# ARK-Rate-Desktop

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  umbrello-rate-businnes-design.xmi  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: base.rs  commands.rs  entities.rs  error.rs  implementations.rs  interactors.rs  lib.rs  main.rs  rates.rs  utilities.rs
src-tauri/src/entities/: asset.rs  coin.rs  create_entity.rs  entity.rs  pair.rs  pair_group.rs  portfolio.rs  position.rs  tag.rs  watchlist.rs
src-tauri/src/implementations/: utilities.rs
src-tauri/src/implementations/data_access/: file_system.rs
src-tauri/src/implementations/data_access/file_system/: file_system_asset.rs  file_system_data_access.rs  file_system_pair.rs  file_system_pair_group.rs  file_system_tag.rs  file_system_watchlist.rs
src-tauri/src/implementations/utilities/: coin_market.rs  market.rs
src-tauri/src/implementations/utilities/coin_market/: github_coin_market.rs
src-tauri/src/implementations/utilities/market/: github_market.rs
src-tauri/src/interactors/: delete_asset.rs  delete_pair_group.rs  delete_tag.rs  delete_watchlist_pair.rs  interactor.rs  save_pair_group.rs  save_tag.rs  store_portfolios.rs  store_watchlist_coins.rs  update_pair_group.rs  update_portfolio.rs  view_pair_groups.rs  view_portfolios.rs  view_watchlist.rs
src-tauri/src/utilities/: coin_market.rs  market.rs
(+65 files in other folders)
